Added web scraping of initiator's company domain and used it to enrich AI prompt

--- a/main.ipynb
+++ b/main.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-22T06:19:37.453921Z",
-     "start_time": "2024-12-22T06:19:37.120166Z"
+     "end_time": "2024-12-22T06:32:15.788691Z",
+     "start_time": "2024-12-22T06:32:15.496555Z"
     }
    },
    "source": [
@@ -29,13 +29,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T06:19:38.293173Z",
-     "start_time": "2024-12-22T06:19:38.132696Z"
+     "end_time": "2024-12-22T06:32:16.997130Z",
+     "start_time": "2024-12-22T06:32:16.833605Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "\n",
     "# Load and preprocess datasets\n",
     "people_path = './data/YC F24 Founder People.csv'\n",
     "personal_data_path = './data/Sudarshan Sridharan People.csv'\n",
@@ -58,23 +57,124 @@
     "personal_data['advertising_paragraph'] = personal_data.apply(generate_advertising_paragraph, axis=1)"
    ],
    "id": "ae2c9af474bcfd2c",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0    withpipeline.com\n",
-      "Name: company_domain, dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T06:28:33.329915Z",
-     "start_time": "2024-12-22T06:28:05.473364Z"
+     "end_time": "2024-12-22T06:32:29.486800Z",
+     "start_time": "2024-12-22T06:32:29.475726Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "personal_data",
+   "id": "1ac65d91399a7e5b",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "             full_name    title  \\\n",
+       "0  Sudarshan Sridharan  Founder   \n",
+       "\n",
+       "                                            location   company  \\\n",
+       "0  San Francisco Bay, San Francisco Bay Area, Uni...  Pipeline   \n",
+       "\n",
+       "                                company_linkedin  \\\n",
+       "0  https://www.linkedin.com/company/withpipeline   \n",
+       "\n",
+       "                                 company_description      sub_title  summary  \\\n",
+       "0  Get more leads, close more deals. Pipeline set...  CEO, Pipeline      NaN   \n",
+       "\n",
+       "                             current_job_description  \\\n",
+       "0  Pipeline puts LinkedIn prospecting and outreac...   \n",
+       "\n",
+       "                        person_industry     skills           education  \\\n",
+       "0  Technology, Information and Internet  Investing  Clemson University   \n",
+       "\n",
+       "                                        work_history    company_domain  \\\n",
+       "0  Pipeline, Fion Technologies, SaveMAPS, Second ...  withpipeline.com   \n",
+       "\n",
+       "                                         domain_info  \\\n",
+       "0  Sign Up → Sign Up → NEW Supercharge Your Sales...   \n",
+       "\n",
+       "                               advertising_paragraph  \n",
+       "0  Sudarshan Sridharan is the Founder at Pipeline...  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>full_name</th>\n",
+       "      <th>title</th>\n",
+       "      <th>location</th>\n",
+       "      <th>company</th>\n",
+       "      <th>company_linkedin</th>\n",
+       "      <th>company_description</th>\n",
+       "      <th>sub_title</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>current_job_description</th>\n",
+       "      <th>person_industry</th>\n",
+       "      <th>skills</th>\n",
+       "      <th>education</th>\n",
+       "      <th>work_history</th>\n",
+       "      <th>company_domain</th>\n",
+       "      <th>domain_info</th>\n",
+       "      <th>advertising_paragraph</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sudarshan Sridharan</td>\n",
+       "      <td>Founder</td>\n",
+       "      <td>San Francisco Bay, San Francisco Bay Area, Uni...</td>\n",
+       "      <td>Pipeline</td>\n",
+       "      <td>https://www.linkedin.com/company/withpipeline</td>\n",
+       "      <td>Get more leads, close more deals. Pipeline set...</td>\n",
+       "      <td>CEO, Pipeline</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Pipeline puts LinkedIn prospecting and outreac...</td>\n",
+       "      <td>Technology, Information and Internet</td>\n",
+       "      <td>Investing</td>\n",
+       "      <td>Clemson University</td>\n",
+       "      <td>Pipeline, Fion Technologies, SaveMAPS, Second ...</td>\n",
+       "      <td>withpipeline.com</td>\n",
+       "      <td>Sign Up → Sign Up → NEW Supercharge Your Sales...</td>\n",
+       "      <td>Sudarshan Sridharan is the Founder at Pipeline...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-22T06:33:04.486032Z",
+     "start_time": "2024-12-22T06:32:34.536046Z"
     }
    },
    "cell_type": "code",
@@ -121,70 +221,58 @@
       "==============================\n",
       "From: Advertiser Name\n",
       "To: Edward Aryee\n",
-      "Message: Hi Edward! Fellow startup founder here - noticed you're building SRE.ai in the YC F24 batch. I'm working on Pipeline to help founders like us streamline outreach and networking. Would love to connect and share insights about the B2B SaaS space.\n",
+      "Message: Hi Edward! Fellow startup founder here. Noticed your impressive journey from Google to founding SRE.ai. I'm building Pipeline to help tech founders with outreach automation. Would love to connect and exchange insights about scaling B2B solutions in the YC ecosystem.\n",
       "\n",
       "------------------------------\n",
       "From: Advertiser Name\n",
       "To: Victor Cheng\n",
-      "Message: Hi Victor! Fellow founder here - noticed you're building vly.ai and going through YC F24. I'm working on Pipeline, a tool that helps startups automate their outreach. Given your technical background, would love to connect and potentially share insights about scaling early-stage companies.\n",
+      "Message: Hey Victor! Fellow founder here - noticed you're building vly.ai through YC F24. As someone who's also in the B2B tech space, I'd love to connect and share insights about scaling startups. Your tech stack expertise is impressive!\n",
       "\n",
       "------------------------------\n",
       "From: Advertiser Name\n",
       "To: Daryl Budiman\n",
-      "Message: Hi Daryl! Fellow startup founder here. Noticed you're building Andoria (YC F24) - impressive tech background from Stanford! I'm working on LinkedIn automation tools that could streamline customer engagement for YC companies. Would love to connect and share insights on scaling early-stage startups.\n",
+      "Message: Hi Daryl! Fellow startup founder here - noticed you're building Andoria through YC. As someone developing automation tools for LinkedIn outreach at Pipeline, I'd love to connect and explore potential synergies between our ventures. Your technical background really stands out!\n",
       "\n",
       "------------------------------\n",
       "From: Advertiser Name\n",
       "To: Finn Mallery\n",
-      "Message: Hi Finn! Fellow startup founder here - noticed you're building Origami Agents through YC. I'm working on Pipeline, automating LinkedIn outreach and CRM workflows. Would love to connect and potentially share insights on building tools that help businesses scale. \n",
-      "\n",
-      "(This note works because: it's personal (mentions YC and their startup), establishes common ground (both founders), suggests mutual benefit (sharing insights), and subtly hints at potential value (automation tools) without\n",
+      "Message: Hi Finn! As a fellow founder in the tech space, I'm impressed by your work with Origami Agents. I'm building Pipeline to help streamline outreach and saw your Stanford background - would love to exchange startup insights and learn from your YC experience.\n",
       "\n",
       "------------------------------\n",
       "From: Advertiser Name\n",
       "To: Arvind V.\n",
-      "Message: Hi Arvind! As a fellow startup founder with experience in early-stage ventures, I noticed your work with Fresco (YC F24). I'm building Pipeline to help founders like us streamline B2B connections. Would love to exchange insights about scaling and automation in the YC ecosystem.\n",
+      "Message: Hi Arvind! Fellow founder here - noticed your background in early-stage startups and YC F24. I've been building tools to help founders streamline their outreach and networking. Would love to connect and share insights about scaling B2B relationships, especially given your experience with strategic partnerships.\n",
       "\n",
       "------------------------------\n",
       "From: Advertiser Name\n",
       "To: Daniel Edrisian\n",
-      "Message: Hi Daniel! Fellow founder here - noticed you're building Alex (YC F24). Your experience at tech giants like Google and Facebook caught my eye. I'm working on Pipeline, helping founders automate their LinkedIn outreach. Would love to connect and maybe share some growth insights!\n",
+      "Message: Hi Daniel! Fellow founder here - noticed you're building Alex (YC F24). I'm working on making LinkedIn automation more efficient for founders like us. Your experience at Google and Facebook caught my eye. Would love to connect and share startup insights!\n",
       "\n",
       "------------------------------\n",
       "From: Advertiser Name\n",
       "To: Shardool Patel\n",
-      "Message: Hi Shardool! Fellow tech founder here - noticed you're building Ryvn (congrats on YC F24!). I'm working on automating LinkedIn workflows and would love to exchange notes on developer tools and scaling challenges. Your background in ML and pipeline development is super relevant.\n",
+      "Message: Hi Shardool! Fellow founder and tech enthusiast here. Love your work with Ryvn and your journey from McMaster to YC. As someone building in the automation space, I'd love to connect and share insights about scaling tech startups. Your DevOps background really caught my eye.\n",
       "\n",
       "------------------------------\n",
       "From: Advertiser Name\n",
       "To: Philipp Baumanns\n",
-      "Message: Hi Philipp! As a fellow startup founder, I noticed your work with telli (YC F24). I'm building Pipeline to help founders like us streamline outreach and networking. Would love to connect and share experiences from our entrepreneurial journeys.\n",
-      "\n",
-      "(This note is personal, relevant to both parties, mentions their shared founder status, and subtly introduces Pipeline's value proposition without being too sales-focused. It stays under 300 characters while maintaining a natural, convers\n",
+      "Message: Hi Philipp! Fellow founder and YC enthusiast here. Love what you're building at telli. As someone working on sales automation tools, I'd love to exchange insights about scaling early-stage companies and learn from your McKinsey & YC experience. Would you be open to connecting?\n",
       "\n",
       "------------------------------\n",
       "From: Advertiser Name\n",
       "To: Akhil Gupta\n",
-      "Message: Hi Akhil! Fellow startup founder here - noticed you're building Fresco (congrats on YC F24!). I'm working on Pipeline, helping founders automate their LinkedIn outreach. Given your technical background and startup experience, would love to connect and potentially share insights.\n",
+      "Message: Hi Akhil! Fellow founder here - noticed your work with Fresco in YC. As someone building in the tech space, I'd love to connect and exchange insights about scaling early-stage companies. Your background in clean energy and ML is fascinating!\n",
       "\n",
       "------------------------------\n",
       "From: Advertiser Name\n",
       "To: Chidi Williams\n",
-      "Message: Hi Chidi! As a fellow founder with experience in automation tech, I noticed your work with Rulebase. Your background in Goldman Sachs and technical expertise caught my eye. I'm building tools to streamline sales workflows - would love to exchange insights on automation and YC experiences.\n",
+      "Message: Hi Chidi! Fellow tech founder here. Noticed your impressive journey from Goldman to founding Rulebase. I'm building Pipeline to help founders like us streamline outreach and CRM processes. Would love to exchange startup experiences and insights!\n",
       "\n",
       "------------------------------\n"
      ]
     }
    ],
-   "execution_count": 10
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "d8e9127f958daaf9"
+   "execution_count": 4
   }
  ],
  "metadata": {
