Added follow up message column

--- a/main.ipynb
+++ b/main.ipynb
@@ -6,19 +6,19 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-23T05:20:56.863097Z",
-     "start_time": "2024-12-23T05:20:56.417399Z"
+     "end_time": "2024-12-23T06:46:46.725780Z",
+     "start_time": "2024-12-23T06:46:46.318067Z"
     }
    },
    "source": [
     "# Import necessary modules\n",
     "import os\n",
-    "\n",
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
     "from modules.paragraph_generation import generate_paragraph, generate_advertising_paragraph\n",
     "from modules.data_processing import load_and_filter_data, preprocess_columns_simple, enrich_advertiser_data_with_domain\n",
-    "from modules.linkedin_requests import initialize_client, generate_linkedin_request\n",
+    "from modules.linkedin_requests import initialize_client, generate_linkedin_request, generate_followup_message\n",
+    "\n",
     "# Load API key\n",
     "load_dotenv()\n",
     "ANTHROPIC_API_KEY = os.getenv('ANTHROPIC_API_KEY')"
@@ -29,8 +29,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-23T05:20:57.981774Z",
-     "start_time": "2024-12-23T05:20:57.748836Z"
+     "end_time": "2024-12-23T06:47:10.979799Z",
+     "start_time": "2024-12-23T06:47:10.585768Z"
     }
    },
    "cell_type": "code",
@@ -50,11 +50,13 @@
     "\n",
     "personal_data = load_and_filter_data(personal_data_path, relevant_columns)\n",
     "personal_data = preprocess_columns_simple(personal_data)\n",
+    "\n",
     "# Enrich personal data with domain information\n",
     "personal_data = enrich_advertiser_data_with_domain(personal_data)\n",
+    "\n",
     "# Generate paragraphs\n",
     "people_data['descriptive_paragraph'] = people_data.apply(generate_paragraph, axis=1)\n",
-    "personal_data['advertising_paragraph'] = personal_data.apply(generate_advertising_paragraph, axis=1)"
+    "personal_data['advertising_paragraph'] = personal_data.apply(generate_advertising_paragraph, axis=1)\n"
    ],
    "id": "ae2c9af474bcfd2c",
    "outputs": [],
@@ -63,8 +65,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-23T05:20:58.929810Z",
-     "start_time": "2024-12-23T05:20:58.921633Z"
+     "end_time": "2024-12-23T06:47:12.722626Z",
+     "start_time": "2024-12-23T06:47:12.715978Z"
     }
    },
    "cell_type": "code",
@@ -173,8 +175,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-23T05:21:26.423462Z",
-     "start_time": "2024-12-23T05:20:59.685964Z"
+     "end_time": "2024-12-23T06:49:39.298700Z",
+     "start_time": "2024-12-23T06:47:35.755726Z"
     }
    },
    "cell_type": "code",
@@ -193,7 +195,9 @@
     "# Process only the first 10 entries\n",
     "max_entries = 10\n",
     "\n",
-    "print(\"Generated LinkedIn Requests:\\n\" + \"=\" * 30)\n",
+    "results = []\n",
+    "\n",
+    "print(\"Generated LinkedIn Requests and Follow-Up Messages:\\n\" + \"=\" * 50)\n",
     "\n",
     "for idx, row in people_data.iterrows():\n",
     "    if idx >= max_entries:\n",
@@ -201,33 +205,27 @@
     "    \n",
     "    descriptive_paragraph = row['descriptive_paragraph']\n",
     "    \n",
-    "    # Prepare the input prompt for the AI\n",
-    "    input_prompt = f\"\"\"\n",
-    "    Person initiating the request:\n",
-    "    {advertising_paragraph}\n",
+    "    # Generate the connection request\n",
+    "    connect_note = generate_linkedin_request(client, advertising_paragraph, descriptive_paragraph, domain_info, system_prompt)\n",
     "    \n",
-    "    Person being contacted:\n",
-    "    {descriptive_paragraph}\n",
+    "    # Generate the follow-up message\n",
+    "    follow_up_message = generate_followup_message(client, advertising_paragraph, descriptive_paragraph, domain_info, system_prompt)\n",
     "    \n",
-    "    Info on the company the advertiser is from:\n",
-    "    {domain_info}\n",
-    "    \n",
-    "    Generate LinkedIn request.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # Generate the LinkedIn request\n",
-    "    linkedin_request = generate_linkedin_request(client, advertising_paragraph, descriptive_paragraph, domain_info, system_prompt)\n",
-    "    \n",
-    "    # Format the output nicely\n",
-    "    from_name = \"Advertiser Name\"  # Replace with the actual advertiser's name if available\n",
-    "    to_name = row['full_name']  # Assuming 'full_name' column exists for the person being contacted\n",
-    "    \n",
-    "    # Print the input prompt and generated message\n",
-    "   # print(f\"Input Prompt to AI:\\n{input_prompt.strip()}\\n\")\n",
-    "    print(f\"From: {from_name}\")\n",
-    "    print(f\"To: {to_name}\")\n",
-    "    print(f\"Message: {linkedin_request}\\n\")\n",
-    "    print(\"-\" * 30)\n"
+    "    # Collect results\n",
+    "    results.append({\n",
+    "        'Name': row['full_name'],\n",
+    "        'Connect Note': connect_note,\n",
+    "        'Follow-Up Message': follow_up_message\n",
+    "    })\n",
+    "\n",
+    "# Create DataFrame from results\n",
+    "output_df = pd.DataFrame(results)\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "output_df.style.set_properties(**{'text-align': 'left'})\n",
+    "\n",
+    "# Save the DataFrame to a CSV for reference\n",
+    "output_df.to_csv('linkedin_messages.csv', index=False)"
    ],
    "id": "759b8896e2d3fe83",
    "outputs": [
@@ -235,62 +233,147 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated LinkedIn Requests:\n",
-      "==============================\n",
-      "From: Advertiser Name\n",
-      "To: Edward Aryee\n",
-      "Message: Hi Edward! Fellow Bay Area founder here - really impressed by your journey from Google & Microsoft to founding SRE.ai. Your background in scaling tech infrastructure aligns with some challenges I'm tackling. Would love to connect and hear about your YC experience and exchange thoughts on the B2B startup ecosystem.\n",
-      "\n",
-      "------------------------------\n",
-      "From: Advertiser Name\n",
-      "To: Victor Cheng\n",
-      "Message: Hey Victor! Really impressive to see your journey with vly.ai and YC F24. As someone who's also built sales tools for startups, I'm curious about the automation challenges you're tackling. Would love to connect and hear about your experience building in the AI space, especially coming from a robotics background with FRC Team 2976.\n",
-      "\n",
-      "------------------------------\n",
-      "From: Advertiser Name\n",
-      "To: Daryl Budiman\n",
-      "Message: Hi Daryl! Fellow Bay Area founder here and YC curious - noticed you're on the F24 batch with Andoria (congrats!). Really intrigued by your path from Amazon to founding your own venture. Would love to connect and hear about your journey through the startup ecosystem.\n",
-      "\n",
-      "------------------------------\n",
-      "From: Advertiser Name\n",
-      "To: Finn Mallery\n",
-      "Message: Hey Finn! Really impressed by your journey from Stanford to YC F24 with Origami Agents. As someone who's built outbound systems for early-stage startups, I'd love to hear about the challenges you're tackling in the AI agency space. Let's connect?\n",
-      "\n",
-      "------------------------------\n",
-      "From: Advertiser Name\n",
-      "To: Arvind V.\n",
-      "Message: Hey Arvind! Really impressed by your work with Fresco getting into YC F24 (congrats!). As a fellow founder who's built multiple startups, I'd love to connect and hear more about your journey from NASA to healthtech to your current venture. Your diverse background spanning healthcare and tech is fascinating.\n",
-      "\n",
-      "------------------------------\n",
-      "From: Advertiser Name\n",
-      "To: Daniel Edrisian\n",
-      "Message: Hey Daniel! Really impressed by your journey from Google/FB to founding Alex (congrats on YC F24 btw!). As a fellow founder in the SF tech scene working on automation tools, I'd love to connect and chat about your experiences building in the AI space. Your work at ElevenLabs caught my attention too!\n",
-      "\n",
-      "------------------------------\n",
-      "From: Advertiser Name\n",
-      "To: Shardool Patel\n",
-      "Message: Hey Shardool! Really impressed by your journey from Palantir to founding Ryvn (congrats on YC F24!). As a fellow founder working with early-stage startups, I'd love to connect and hear about your experiences scaling technical teams and building from the ground up. -Sudarshan\n",
-      "\n",
-      "------------------------------\n",
-      "From: Advertiser Name\n",
-      "To: Philipp Baumanns\n",
-      "Message: Hi Philipp! As a fellow founder building in the SF startup ecosystem, I noticed your work with telli getting into YC F24 (congrats!). Would love to connect and hear about your experience scaling early-stage ventures, especially given your background at McKinsey and Picus Capital.\n",
-      "\n",
-      "------------------------------\n",
-      "From: Advertiser Name\n",
-      "To: Akhil Gupta\n",
-      "Message: Hey Akhil! Really intrigued by your path from Johns Hopkins to YC F24 with Fresco. As a fellow founder who's worked with early-stage startups, I'd love to connect and hear more about your journey from clean energy to your current venture. (Congrats on YC btw!)\n",
-      "\n",
-      "------------------------------\n",
-      "From: Advertiser Name\n",
-      "To: Chidi Williams\n",
-      "Message: Hi Chidi! Noticed you're building something exciting at Rulebase (congrats on YC F24!). As someone who's worked with early-stage B2B startups, I'd love to connect and hear about your journey from Goldman to founder. Your fintech experience is fascinating!\n",
-      "\n",
-      "------------------------------\n"
+      "Generated LinkedIn Requests and Follow-Up Messages:\n",
+      "==================================================\n"
      ]
     }
    ],
    "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-23T06:52:06.715507Z",
+     "start_time": "2024-12-23T06:52:06.710377Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "output_df",
+   "id": "c3c63d705e85784a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "               Name                                       Connect Note  \\\n",
+       "0      Edward Aryee  Hey Edward! Your journey from Google to foundi...   \n",
+       "1      Victor Cheng  Hey Victor! Really cool to see another YC foun...   \n",
+       "2     Daryl Budiman  Hey Daryl! Love the work you're doing with And...   \n",
+       "3      Finn Mallery  Hi Finn! As a fellow startup founder, I really...   \n",
+       "4         Arvind V.  Hey Arvind! Fellow YC founder here - building ...   \n",
+       "5   Daniel Edrisian  Hey Daniel! Really cool to see another founder...   \n",
+       "6    Shardool Patel  Hey Shardool! Congrats on Ryvn's YC acceptance...   \n",
+       "7  Philipp Baumanns  Hi Philipp! Really cool to see another founder...   \n",
+       "8       Akhil Gupta  Hey Akhil! Your path from JHU to founding Fres...   \n",
+       "9    Chidi Williams  Hi Chidi! Love seeing fellow founders in the Y...   \n",
+       "\n",
+       "                                   Follow-Up Message  \n",
+       "0  Thank you for accepting my connection! I know ...  \n",
+       "1  Here's a natural follow-up message:\\n\\nHi Vict...  \n",
+       "2  Hi Daryl! Thanks for connecting! \\n\\nI noticed...  \n",
+       "3  Hey Finn! Thanks for connecting. I noticed you...  \n",
+       "4  Here's a natural follow-up message:\\n\\nHey Arv...  \n",
+       "5  Hey Daniel! Thanks for connecting. I wanted to...  \n",
+       "6  Hey Shardool - thanks for connecting! \\n\\nReal...  \n",
+       "7  Hi Philipp! Awesome to connect. Noticed you're...  \n",
+       "8  Hey Akhil! Thanks for connecting. I noticed yo...  \n",
+       "9  Here's a natural follow-up message:\\n\\nHi Chid...  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Connect Note</th>\n",
+       "      <th>Follow-Up Message</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Edward Aryee</td>\n",
+       "      <td>Hey Edward! Your journey from Google to foundi...</td>\n",
+       "      <td>Thank you for accepting my connection! I know ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Victor Cheng</td>\n",
+       "      <td>Hey Victor! Really cool to see another YC foun...</td>\n",
+       "      <td>Here's a natural follow-up message:\\n\\nHi Vict...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Daryl Budiman</td>\n",
+       "      <td>Hey Daryl! Love the work you're doing with And...</td>\n",
+       "      <td>Hi Daryl! Thanks for connecting! \\n\\nI noticed...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Finn Mallery</td>\n",
+       "      <td>Hi Finn! As a fellow startup founder, I really...</td>\n",
+       "      <td>Hey Finn! Thanks for connecting. I noticed you...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Arvind V.</td>\n",
+       "      <td>Hey Arvind! Fellow YC founder here - building ...</td>\n",
+       "      <td>Here's a natural follow-up message:\\n\\nHey Arv...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Daniel Edrisian</td>\n",
+       "      <td>Hey Daniel! Really cool to see another founder...</td>\n",
+       "      <td>Hey Daniel! Thanks for connecting. I wanted to...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Shardool Patel</td>\n",
+       "      <td>Hey Shardool! Congrats on Ryvn's YC acceptance...</td>\n",
+       "      <td>Hey Shardool - thanks for connecting! \\n\\nReal...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Philipp Baumanns</td>\n",
+       "      <td>Hi Philipp! Really cool to see another founder...</td>\n",
+       "      <td>Hi Philipp! Awesome to connect. Noticed you're...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Akhil Gupta</td>\n",
+       "      <td>Hey Akhil! Your path from JHU to founding Fres...</td>\n",
+       "      <td>Hey Akhil! Thanks for connecting. I noticed yo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Chidi Williams</td>\n",
+       "      <td>Hi Chidi! Love seeing fellow founders in the Y...</td>\n",
+       "      <td>Here's a natural follow-up message:\\n\\nHi Chid...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -298,7 +381,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "c3c63d705e85784a"
+   "id": "deaf5f369afe41bc"
   }
  ],
  "metadata": {
