Added follow up message column

--- a/main.ipynb
+++ b/main.ipynb
@@ -243,137 +243,45 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-23T06:52:06.715507Z",
-     "start_time": "2024-12-23T06:52:06.710377Z"
+     "end_time": "2024-12-23T06:58:58.808975Z",
+     "start_time": "2024-12-23T06:58:58.805086Z"
     }
    },
    "cell_type": "code",
-   "source": "output_df",
+   "source": "print(output_df)",
    "id": "c3c63d705e85784a",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "               Name                                       Connect Note  \\\n",
-       "0      Edward Aryee  Hey Edward! Your journey from Google to foundi...   \n",
-       "1      Victor Cheng  Hey Victor! Really cool to see another YC foun...   \n",
-       "2     Daryl Budiman  Hey Daryl! Love the work you're doing with And...   \n",
-       "3      Finn Mallery  Hi Finn! As a fellow startup founder, I really...   \n",
-       "4         Arvind V.  Hey Arvind! Fellow YC founder here - building ...   \n",
-       "5   Daniel Edrisian  Hey Daniel! Really cool to see another founder...   \n",
-       "6    Shardool Patel  Hey Shardool! Congrats on Ryvn's YC acceptance...   \n",
-       "7  Philipp Baumanns  Hi Philipp! Really cool to see another founder...   \n",
-       "8       Akhil Gupta  Hey Akhil! Your path from JHU to founding Fres...   \n",
-       "9    Chidi Williams  Hi Chidi! Love seeing fellow founders in the Y...   \n",
-       "\n",
-       "                                   Follow-Up Message  \n",
-       "0  Thank you for accepting my connection! I know ...  \n",
-       "1  Here's a natural follow-up message:\\n\\nHi Vict...  \n",
-       "2  Hi Daryl! Thanks for connecting! \\n\\nI noticed...  \n",
-       "3  Hey Finn! Thanks for connecting. I noticed you...  \n",
-       "4  Here's a natural follow-up message:\\n\\nHey Arv...  \n",
-       "5  Hey Daniel! Thanks for connecting. I wanted to...  \n",
-       "6  Hey Shardool - thanks for connecting! \\n\\nReal...  \n",
-       "7  Hi Philipp! Awesome to connect. Noticed you're...  \n",
-       "8  Hey Akhil! Thanks for connecting. I noticed yo...  \n",
-       "9  Here's a natural follow-up message:\\n\\nHi Chid...  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Connect Note</th>\n",
-       "      <th>Follow-Up Message</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Edward Aryee</td>\n",
-       "      <td>Hey Edward! Your journey from Google to foundi...</td>\n",
-       "      <td>Thank you for accepting my connection! I know ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Victor Cheng</td>\n",
-       "      <td>Hey Victor! Really cool to see another YC foun...</td>\n",
-       "      <td>Here's a natural follow-up message:\\n\\nHi Vict...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Daryl Budiman</td>\n",
-       "      <td>Hey Daryl! Love the work you're doing with And...</td>\n",
-       "      <td>Hi Daryl! Thanks for connecting! \\n\\nI noticed...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Finn Mallery</td>\n",
-       "      <td>Hi Finn! As a fellow startup founder, I really...</td>\n",
-       "      <td>Hey Finn! Thanks for connecting. I noticed you...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Arvind V.</td>\n",
-       "      <td>Hey Arvind! Fellow YC founder here - building ...</td>\n",
-       "      <td>Here's a natural follow-up message:\\n\\nHey Arv...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Daniel Edrisian</td>\n",
-       "      <td>Hey Daniel! Really cool to see another founder...</td>\n",
-       "      <td>Hey Daniel! Thanks for connecting. I wanted to...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Shardool Patel</td>\n",
-       "      <td>Hey Shardool! Congrats on Ryvn's YC acceptance...</td>\n",
-       "      <td>Hey Shardool - thanks for connecting! \\n\\nReal...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Philipp Baumanns</td>\n",
-       "      <td>Hi Philipp! Really cool to see another founder...</td>\n",
-       "      <td>Hi Philipp! Awesome to connect. Noticed you're...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Akhil Gupta</td>\n",
-       "      <td>Hey Akhil! Your path from JHU to founding Fres...</td>\n",
-       "      <td>Hey Akhil! Thanks for connecting. I noticed yo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Chidi Williams</td>\n",
-       "      <td>Hi Chidi! Love seeing fellow founders in the Y...</td>\n",
-       "      <td>Here's a natural follow-up message:\\n\\nHi Chid...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               Name                                       Connect Note  \\\n",
+      "0      Edward Aryee  Hey Edward! Your journey from Google to foundi...   \n",
+      "1      Victor Cheng  Hey Victor! Really cool to see another YC foun...   \n",
+      "2     Daryl Budiman  Hey Daryl! Love the work you're doing with And...   \n",
+      "3      Finn Mallery  Hi Finn! As a fellow startup founder, I really...   \n",
+      "4         Arvind V.  Hey Arvind! Fellow YC founder here - building ...   \n",
+      "5   Daniel Edrisian  Hey Daniel! Really cool to see another founder...   \n",
+      "6    Shardool Patel  Hey Shardool! Congrats on Ryvn's YC acceptance...   \n",
+      "7  Philipp Baumanns  Hi Philipp! Really cool to see another founder...   \n",
+      "8       Akhil Gupta  Hey Akhil! Your path from JHU to founding Fres...   \n",
+      "9    Chidi Williams  Hi Chidi! Love seeing fellow founders in the Y...   \n",
+      "\n",
+      "                                   Follow-Up Message  \n",
+      "0  Thank you for accepting my connection! I know ...  \n",
+      "1  Here's a natural follow-up message:\\n\\nHi Vict...  \n",
+      "2  Hi Daryl! Thanks for connecting! \\n\\nI noticed...  \n",
+      "3  Hey Finn! Thanks for connecting. I noticed you...  \n",
+      "4  Here's a natural follow-up message:\\n\\nHey Arv...  \n",
+      "5  Hey Daniel! Thanks for connecting. I wanted to...  \n",
+      "6  Hey Shardool - thanks for connecting! \\n\\nReal...  \n",
+      "7  Hi Philipp! Awesome to connect. Noticed you're...  \n",
+      "8  Hey Akhil! Thanks for connecting. I noticed yo...  \n",
+      "9  Here's a natural follow-up message:\\n\\nHi Chid...  \n"
+     ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {},
